--- a/src/app/mainsplitter/mainsplitter.component.html
+++ b/src/app/mainsplitter/mainsplitter.component.html
@@ -1,1 +1,22 @@
-<p>mainsplitter works!</p>
+<p-splitter
+  [layout]="'horizontal'"
+  [panelSizes]="[20, 20, 59]"
+  [style]="{
+    height: '100vh',
+    width: '100%',
+    border: '0px',
+    borderRadius: '0px'
+  }"
+>
+  <ng-template pTemplate>
+    <app-folders></app-folders>
+  </ng-template>
+
+  <ng-template pTemplate>
+    <app-snippets></app-snippets>
+  </ng-template>
+
+  <ng-template pTemplate>
+    <app-editor></app-editor>
+  </ng-template>
+</p-splitter>
