--- a/src/app/mainsplitter/folders/folders.component.html
+++ b/src/app/mainsplitter/folders/folders.component.html
@@ -1,1 +1,18 @@
-<p>folders works!</p>
+<p-iconField
+    iconPosition="right">
+    <p-inputIcon styleClass="pi pi-search"></p-inputIcon>
+    <input
+        type="text"
+        pInputText
+        placeholder="Search"
+        [(ngModel)]="filterValue"
+        (input)="applyFilter()"
+        [style]="{
+            width: '100%', 
+            fontSize: '15px', 
+            borderRadius: '0px', 
+            border: '0px', 
+            background: 'transparent'
+        }"
+    /> 
+</p-iconField>
