--- a/src/app/mainsplitter/mainsplitter.component.html
+++ b/src/app/mainsplitter/mainsplitter.component.html
@@ -2,10 +2,11 @@
   [layout]="'horizontal'"
   [panelSizes]="[20, 20, 59]"
   [style]="{
-    height: '100vh',
+    height: '100%',
     width: '100%',
     border: '0px',
-    borderRadius: '0px'
+    borderRadius: '0px',
+    overflow: 'hidden'
   }"
 >
   <ng-template pTemplate>
