tree select works

--- a/src/app/mainsplitter/folders/folders.component.html
+++ b/src/app/mainsplitter/folders/folders.component.html
@@ -94,12 +94,12 @@
     <p-treeSelect
       [placeholder]="'Select parent folder'"
       [(ngModel)]="selectedNodeFolder"
-      [options]="folders"
+      [options]="treeSelect"
       [containerStyle]="{ width: '100%' }"
       [class.ng-invalid]="selectedNodeFolder === null && !isAddRootFolder || selectedNodeFolder === undefined && !isAddRootFolder"
       [class.ng-dirty]="selectedNodeFolder === null && !isAddRootFolder || selectedNodeFolder === undefined && !isAddRootFolder"
       [virtualScroll]="true" 
-      [virtualScrollItemSize]="25" 
+      [virtualScrollItemSize]="35" 
       [virtualScrollOptions]="{scrollHeight: '250px'}"
       [filter]="true" 
       [filterInputAutoFocus]="true"
