--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,8 @@
-@import "primeng/resources/themes/lara-light-blue/theme.css";
-/* @import "primeng/resources/themes/bootstrap4-dark-blue/theme.css"; */
+@import 'primeng/resources/themes/saga-blue/theme.css';
 @import "primeng/resources/primeng.css";
 @import "primeicons/primeicons.css";
+@import "primeng/resources/primeng.min.css";
+
 
 html, body {
     margin: 0;
