--- a/src/app/mainsplitter/folders/folders.component.html
+++ b/src/app/mainsplitter/folders/folders.component.html
@@ -17,7 +17,7 @@
 </p-iconField>
 <p-splitButton
   label="New Folder"
-  (onClick)="globalAddFolder()"
+  (onClick)="globalAddFolder(true)"
   [model]="sbItems"
   text
   size="small"
@@ -42,6 +42,8 @@
   [loadingIcon]="'pi pi-spin pi-spinner'"
   [loadingMode]="'icon'"
   [emptyMessage]="'NO FOLDERS'"
+  (onNodeContextMenuSelect)="nodeContextMenuSelect($event)"
+  [layout]="'vertical'"
   [style]="{
     height: '{{this.windowValues.height}}px',
     overflowY: 'auto',
