--- a/src/styles.css
+++ b/src/styles.css
@@ -11,4 +11,8 @@ html, body {
     height: 100%;
     width: 100%;
 }
+
+app-root, app-mainpanel, .p-tabview, .p-tabview-panels, .p-tabview-panel {
+  height: 100%;
+}
   
